--- a/ProductCatalog-Web/Areas/ContentManager/Views/Product/Index.cshtml
+++ b/ProductCatalog-Web/Areas/ContentManager/Views/Product/Index.cshtml
@@ -36,14 +36,14 @@
                             <img src="~/img/@item.ImageUrl" alt="Product Image" class="img-thumbnail" style="width: 400px; height: 400px;" />
                             <div class="product-info p-3">
                                 <h5 class="product-title">@item.Name</h5>
-                                <p class="product-summary text-muted">@item.Summary</p>
                                 <p class="product-price text-success">@item.Price.ToString("C", new CultureInfo("en-US"))</p>
                                 <div class="d-flex justify-content-between">
-                                    <a href="@Url.Action("Detail", "Home", new { id = item.Id })" class="btn btn-primary">Details</a>
-                                    <form method="post" action="@Url.Action("AddToCart", "Cart")">
-                                        <input type="hidden" name="productId" value="@item.Id" />
-                                        <button type="submit" class="btn btn-success">Add To Cart</button>
-                                    </form>
+                                    <a href="@Url.Action("GetById", "Product", new { id = item.Id })" class="btn btn-primary">Show Product</a>
+
+                                    @if (User.IsInRole("ContentManager"))
+                                    {
+                                        <a href="@Url.Action("Edit", "Product", new { id = item.Id })" class="btn btn-warning">Edit</a>
+                                    }
                                 </div>
                             </div>
                         </div>
