--- a/ProductCatalog-Web/Views/Offers/Index.cshtml
+++ b/ProductCatalog-Web/Views/Offers/Index.cshtml
@@ -5,46 +5,45 @@
     ViewData["Title"] = "Offers";
 }
 
-<h1 class="mb-4">My Offers</h1>
-
+<h1 class="mb-4 text-dark">My Offers</h1>
 
 <div class="table-responsive">
     <table class="table table-striped table-bordered">
-        <thead class="table-dark">
+        <thead class="bg-dark text-white">
             <tr>
                 <th>@Html.DisplayNameFor(model => model.OfferPrice)</th>
                 <th>@Html.DisplayNameFor(model => model.CounterPrice)</th>
                 <th>@Html.DisplayNameFor(model => model.ProductCount)</th>
-                <th>@Html.DisplayNameFor(model => model.UserId)</th>
+                <th>@Html.DisplayNameFor(model => model.User.Email)</th>
                 <th>@Html.DisplayNameFor(model => model.Status)</th>
                 <th>Actions</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody class="bg-light">
             @foreach (var item in Model)
             {
-                    <tr>
-                        <td>$@Html.DisplayFor(modelItem => item.OfferPrice)</td>
-                        <td>$@Html.DisplayFor(modelItem => item.CounterPrice)</td>
-                        <td>@Html.DisplayFor(modelItem => item.ProductCount)</td>
-                        <td>@Html.DisplayFor(modelItem => item.UserId)</td>
-                        <td>
-                            <span class="badge @(item.Status == Status.Active ? "bg-success" : "bg-warning")">
+                <tr>
+                    <td class="text-dark">$@Html.DisplayFor(modelItem => item.OfferPrice)</td>
+                    <td class="text-dark">$@Html.DisplayFor(modelItem => item.CounterPrice)</td>
+                    <td class="text-dark">@Html.DisplayFor(modelItem => item.ProductCount)</td>
+                    <td class="text-dark">@Html.DisplayFor(modelItem => item.User.Email)</td>
+                    <td>
+                        <span class="badge @(item.Status == Status.Active ? "bg-success" : "bg-danger")">
                             @Html.DisplayFor(modelItem => item.Status)
-                            </span>
-                        </td>
-                        <td>
-                            <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-warning">
-                                <i class="fa-solid fa-edit"></i> Edit
-                            </a>
-                            <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-info text-white">
-                                <i class="fa-solid fa-info-circle"></i> Details
-                            </a>
-                            <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger">
-                                <i class="fa-solid fa-trash"></i> Delete
-                            </a>
-                        </td>
-                    </tr>
+                        </span>
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-warning text-dark">
+                            <i class="fa-solid fa-edit"></i> Edit
+                        </a>
+                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-info text-white">
+                            <i class="fa-solid fa-info-circle"></i> Details
+                        </a>
+                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger text-white">
+                            <i class="fa-solid fa-trash"></i> Delete
+                        </a>
+                    </td>
+                </tr>
             }
         </tbody>
     </table>
